[package]
name = "pong"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.19.0"}
fastrand = "2.4.1"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }

[features]
dev = ["bevy/dynamic_linking"]

[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
